<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.elasticsearch</groupId>
    <artifactId>elasticsearch-river-solr</artifactId>
    <version>2.0</version>
    <packaging>jar</packaging>
    <description>Solr River for ElasticSearch</description>
    <inceptionYear>2012</inceptionYear>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git@github.com:javanna/elasticsearch-river-solr.git</connection>
        <developerConnection>scm:git:git@github.com:javanna/elasticsearch-river-solr.git</developerConnection>
        <url>http://github.com/javanna/elasticsearch-river-solr</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>bintray-javanna</id>
            <name>javanna-elasticsearch-tools-elasticsearch-river-solr</name>
            <url>https://api.bintray.com/maven/javanna/elasticsearch-tools/elasticsearch-river-solr/release</url>
        </repository>
    </distributionManagement>

    <properties>
        <elasticsearch.version>1.3.0</elasticsearch.version>
        <!-- must match the lucene version used by elasticsearch
             and solr-core (only for testing)  -->
        <lucene.version>4.9.0</lucene.version>
        <httpclient.version>4.3.2</httpclient.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <tests.jvms>1</tests.jvms>
        <tests.shuffle>true</tests.shuffle>
        <tests.output>onerror</tests.output>
        <tests.client.ratio></tests.client.ratio>
        <es.logger.level>INFO</es.logger.level>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.carrotsearch.randomizedtesting</groupId>
            <artifactId>randomizedtesting-runner</artifactId>
            <version>2.0.15</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.solr</groupId>
            <artifactId>solr-test-framework</artifactId>
            <version>${lucene.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.elasticsearch</groupId>
            <artifactId>elasticsearch</artifactId>
            <version>${elasticsearch.version}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.7</version>
        </dependency>

        <dependency>
            <groupId>org.elasticsearch</groupId>
            <artifactId>elasticsearch</artifactId>
            <version>${elasticsearch.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${httpclient.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpmime</artifactId>
            <version>${httpclient.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.3.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <fork>true</fork>
                    <maxmem>512m</maxmem>
                    <!-- REMOVE WHEN UPGRADE:
                         see https://jira.codehaus.org/browse/MCOMPILER-209 it's a bug where
                         incremental compilation doesn't work unless it's set to false causeing
                         recompilation of the entire codebase each time without any changes. Should
                         be fixed in version > 3.1
                     -->
                    <useIncrementalCompilation>false</useIncrementalCompilation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.carrotsearch.randomizedtesting</groupId>
                <artifactId>junit4-maven-plugin</artifactId>
                <version>2.0.15</version>
                <executions>
                    <execution>
                        <id>tests</id>
                        <phase>test</phase>
                        <goals>
                            <goal>junit4</goal>
                        </goals>
                        <configuration>
                            <heartbeat>20</heartbeat>
                            <jvmOutputAction>pipe,warn</jvmOutputAction>
                            <leaveTemporary>true</leaveTemporary>
                            <listeners>
                                <report-ant-xml mavenExtensions="true"
                                                dir="${project.build.directory}/surefire-reports"/>
                                <report-text
                                        showThrowable="true"
                                        showStackTraces="true"
                                        showOutput="${tests.output}"
                                        showStatusOk="false"
                                        showStatusError="true"
                                        showStatusFailure="true"
                                        showStatusIgnored="true"
                                        showSuiteSummary="true"
                                        timestamps="false"/>
                                <report-execution-times file="${basedir}/.local-execution-hints.log"/>
                            </listeners>
                            <assertions>
                                <enable/>
                            </assertions>
                            <parallelism>${tests.jvms}</parallelism>
                            <balancers>
                                <execution-times>
                                    <fileset dir="${basedir}" includes=".local-execution-hints.log"/>
                                </execution-times>
                            </balancers>
                            <includes>
                                <include>**/*Tests.class</include>
                                <include>**/*Test.class</include>
                            </includes>
                            <excludes>
                                <exclude>**/Abstract*.class</exclude>
                                <exclude>**/*StressTest.class</exclude>
                            </excludes>
                            <argLine>
                                ${tests.jvm.argline}
                            </argLine>
                            <jvmArgs>
                                <param>-Xmx512m</param>
                                <param>-Xss256k</param>
                                <param>-XX:MaxPermSize=128m</param>
                                <param>-XX:MaxDirectMemorySize=512m</param>
                                <param>-Des.logger.prefix=</param>
                            </jvmArgs>
                            <shuffleOnSlave>${tests.shuffle}</shuffleOnSlave>
                            <sysouts>${tests.verbose}</sysouts>
                            <seed>${tests.seed}</seed>
                            <haltOnFailure>${tests.failfast}</haltOnFailure>
                            <systemProperties>
                                <java.io.tmpdir>.</java.io.tmpdir> <!-- we use '.' since this is different per JVM-->
                                <!-- RandomizedTesting library system properties -->
                                <tests.jvm.argline>${tests.jvm.argline}</tests.jvm.argline>
                                <tests.appendseed>${tests.appendseed}</tests.appendseed>
                                <tests.iters>${tests.iters}</tests.iters>
                                <tests.maxfailures>${tests.maxfailures}</tests.maxfailures>
                                <tests.failfast>${tests.failfast}</tests.failfast>
                                <tests.class>${tests.class}</tests.class>
                                <tests.method>${tests.method}</tests.method>
                                <tests.nightly>${tests.nightly}</tests.nightly>
                                <tests.badapples>${tests.badapples}</tests.badapples>
                                <tests.weekly>${tests.weekly}</tests.weekly>
                                <tests.slow>${tests.slow}</tests.slow>
                                <tests.awaitsfix>${tests.awaitsfix}</tests.awaitsfix>
                                <tests.slow>${tests.slow}</tests.slow>
                                <tests.timeoutSuite>${tests.timeoutSuite}</tests.timeoutSuite>
                                <tests.showSuccess>${tests.showSuccess}</tests.showSuccess>
                                <tests.integration>${tests.integration}</tests.integration>
                                <tests.cluster_seed>${tests.cluster_seed}</tests.cluster_seed>
                                <tests.client.ratio>${tests.client.ratio}</tests.client.ratio>
                                <tests.enable_mock_modules>${tests.enable_mock_modules}</tests.enable_mock_modules>
                                <es.node.local>${env.ES_TEST_LOCAL}</es.node.local>
                                <es.node.mode>${es.node.mode}</es.node.mode>
                                <es.logger.level>${es.logger.level}</es.logger.level>
                                <java.awt.headless>true</java.awt.headless>
                            </systemProperties>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <!-- we skip surefire to work with randomized testing above -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <appendAssemblyId>false</appendAssemblyId>
                    <outputDirectory>${project.build.directory}/releases/</outputDirectory>
                    <descriptors>
                        <descriptor>${basedir}/src/main/assemblies/plugin.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
